[Whitespace fix, Upcoming matches & roster change] Fixed an issue where whitespace occured outside html and body tag when viewing the page with mobile and tablets, added javascript to get match data from api.tpj.fi, updated roster  + minor fixes

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -5,7 +5,7 @@
     background-color: #181818;
     font-size: 100%;
     padding: 10px;
-  
+
     a {
       text-decoration: none;
       color: white;
@@ -20,7 +20,7 @@
 
 #footer-wrap {
     text-align: center;
-    height: 100%;
+    height: auto;
     //padding: 10px;
     color:white;
     display: flex;
@@ -30,19 +30,19 @@
     ul{
       padding-left: 0px;
     }
-  
+
     li{
       list-style: none;
       margin: 10px 30px;
-  
+
       font-size: 20px;
       padding: 15px 15px;
       color: #fff;
       border: 1px solid #fff;
       border-radius: 50%;
-  
+
     }
-  
+
   }
 
 //---------------DESKTOP-----------------------------
@@ -50,7 +50,7 @@
     #footer  {
         bottom: 0;
       }
-      
+
       #footer-wrap {
         text-align: center;
         padding: 10px;
@@ -62,23 +62,23 @@
         align-content: center;
         margin: 20px;
         margin-bottom: 0px;
-      
-      
+
+
         p {
           margin: 0px;
           padding: 16px;
           height: 20px;
           //font-style: italic;
-      
+
         }
-      
+
         ul {
-      
+
         }
         li{
           border: 1px solid #fff;
-      
+
         }
-      
+
       }
 }
