--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -20,15 +20,11 @@ html {
   margin-top: 0;
   overflow-x: hidden;
   width: 100vw;
-  background-color: red;
-
-  /*
   background: url(de_train_sumea.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  */
 }
 
 body {
@@ -48,6 +44,7 @@ a:focus {
   //background-color: black;
   height: 200vh;
   display: block;
+  overflow-x: hidden;
 }
 
 //----------------------DESKTOP------DESKTOP----------DESKTOP----------------DESKTOP------DESKTOP----------DESKTOP-----------DESKTOP------DESKTOP----------DESKTOP-----------DESKTOP------DESKTOP----------DESKTOP------
@@ -60,7 +57,6 @@ a:focus {
     height: 100%;
     display: block;
   }
-  
+
 
 }
-
